--- a/vip.html
+++ b/vip.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>商户首页</title>
+    <title>会员规则</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -28,33 +28,16 @@
     <link rel="stylesheet" href="assets/css/amazeui.css">
     <link rel="stylesheet" href="assets/css/common.css">
     <style>
-        .am-nav-tabs.am-nav-justify > li > a {
-            border: 1px solid #ddd;
-            border-right-width: 0;
+        .btn {
+            padding: 4px 6px;
+            color: white;
+            background: #ff6966;
+            border-radius: 3px;
         }
 
-        .am-nav-tabs.am-nav-justify > .am-active > a,
-        .am-nav-tabs.am-nav-justify > .am-active > a:hover,
-        .am-nav-tabs.am-nav-justify > .am-active > a:focus {
-            color: #ff6966;
-            border-bottom: #ff6966 2px solid;
+        .margin-push {
+            margin-left: -8px;
         }
-
-        .am-panel-default > .am-panel-hd {
-            background-color: white;
-        }
-
-        .am-panel {
-            border-width: 0;
-        }
-
-        .am-panel-collapse ul > li {
-
-        }
-        .am-icon-border{
-            border-width: 2px;
-        }
-
     </style>
 </head>
 <body>
@@ -106,89 +89,144 @@
 </div>
 <hr/>
 <div class="second-title" style="height: 8px"></div>
-
-<!--登陆end-->
-<!--<div style="height: 180px"></div>-->
-<div class="am-tabs" id="doc-my-tabs">
-    <ul class="am-tabs-nav am-nav am-nav-tabs am-nav-justify">
-        <li class="am-active"><a href="">充值入会</a></li>
-        <li><a href="">购买入会</a></li>
-        <li><a href="">会员升级</a></li>
-    </ul>
-    <div class="am-tabs-bd" style="border:none">
-        <div class="am-tab-panel am-active am-padding-0">
-            <div class="am-panel-group" id="accordion">
-                <div class="am-panel am-panel-default">
-                    <div class="am-panel-hd">
-                        <div class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-1'}">
-                            普通会员<span class="am-fr"><i class="iconfont text-orange">&#xe609;</i></span>
-                        </div>
-                    </div>
-                    <div id="do-not-say-1" class="am-panel-collapse am-collapse am-in">
-                        <div class="am-panel-bd am-padding-bottom-xs" style="border-top-width: 0;">
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                            <div class="am-divider-dashed" style="margin: -10px 0"></div>
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                        </div>
-                    </div>
+<div class="am-padding-sm">
+    <div class="am-margin-vertical">
+        <img src="assets/images/hui.png" style="vertical-align: text-bottom" alt=""/>
+        <span class="am-text-lg padding-xxs">会员招募进行中</span>
+    </div>
+    <div class="am-text-center text-orange">
+        <i class="iconfont text-orange padding-xxs">&#xe60d;</i>
+        <span class="padding-xxs">银卡会员</span>
+        <i class="iconfont text-orange padding-xxs">&#xe60d;</i>
+    </div>
+    <div class="border-radius am-margin-vertical-sm"
+         style="background:url('assets/images/oval.png') repeat-x bottom;border: solid #f0f0f0;border-width: 5px 2px 0 2px;">
+        <div class="am-padding">
+            <div class="text-orange">会员专享</div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
                 </div>
-                <div class="am-panel am-panel-default">
-                    <div class="am-panel-hd">
-                        <div class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-2'}">
-                            普通会员<span class="am-fr"><i class="iconfont text-orange">&#xe609;</i></span>
-                        </div>
-                    </div>
-                    <div id="do-not-say-2" class="am-panel-collapse am-collapse">
-                        <div class="am-panel-bd am-padding-bottom-xs" style="border-top-width: 0;">
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                            <div class="am-divider-dashed" style="margin: -10px 0"></div>
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                        </div>
-                    </div>
+            </div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
                 </div>
-                <div class="am-panel am-panel-default">
-                    <div class="am-panel-hd">
-                        <div class="am-panel-title" data-am-collapse="{parent: '#accordion', target: '#do-not-say-3'}">
-                            普通会员<span class="am-fr"><i class="iconfont text-orange">&#xe609;</i></span>
-                        </div>
-                    </div>
-                    <div id="do-not-say-3" class="am-panel-collapse am-collapse">
-                        <div class="am-panel-bd am-padding-bottom-xs" style="border-top-width: 0;">
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                            <div class="am-divider-dashed" style="margin: -10px 0"></div>
-                            <ul class="text-grey am-text-sm" type="disc">
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                                <li>重装后满200元成为普通会员，专享8.8折优惠</li>
-                            </ul>
-                        </div>
-                    </div>
+            </div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
+                </div>
+            </div>
+            <div class="text-orange am-padding-vertical-sm">入会规则</div>
+            <div class="am-margin-bottom-xl">
+                <div class="am-fl">
+                    <span class="text-orange">
+                        <i class="iconfont">&#xe60e;</i>
+                    </span>
+                    <span style="margin-left: -3px">免费领取银卡会员卡</span>
+                </div>
+                <div class="am-fr">
+                    <button class="am-btn am-btn-xs btn">免费领卡</button>
                 </div>
             </div>
         </div>
-        <div class="am-tab-panel">...</div>
-        <div class="am-tab-panel">...</div>
-        <div class="am-tab-panel">...</div>
+    </div>
+    <div class="am-text-center text-orange am-margin-top am-margin-bottom-sm">
+        <i class="iconfont text-orange padding-xxs">&#xe60d;</i>
+        <span class="padding-xxs">金卡会员</span>
+        <i class="iconfont text-orange padding-xxs">&#xe60d;</i>
+    </div>
+    <div class="border-radius"
+         style="background:url('assets/images/oval.png') repeat-x bottom;border: solid #f0f0f0;border-width: 5px 2px 0 2px;">
+        <div class="am-padding">
+            <div class="text-orange">会员专享</div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
+                </div>
+            </div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
+                </div>
+            </div>
+            <div class="border-radius bg-grey-white am-margin-top-sm">
+                <div class="am-padding-sm">
+                    会员生日送券
+                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
+                </div>
+            </div>
+            <div class="text-orange am-padding-vertical-sm">入会规则</div>
+            <div class="am-g am-g-collapse">
+                <div class="am-u-sm-1 text-orange">
+                    <i class="iconfont">&#xe60e;</i>
+                </div>
+                <div class="am-u-sm-8 ">
+                    <div class="margin-push">
+                        免费领取银卡会员卡免费领取银卡免费领取银卡
+                    </div>
+                </div>
+                <div class="am-u-sm-3">
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                </div>
+            </div>
+            <hr class="am-cf am-margin-vertical-sm"/>
+
+            <div class="am-g am-g-collapse">
+                <div class="am-u-sm-1 text-orange">
+                    <i class="iconfont">&#xe60e;</i>
+                </div>
+                <div class="am-u-sm-8">
+                    <div class="margin-push">
+                        免费领取银卡会员卡免费领取银卡免费领取银卡
+                    </div>
+                </div>
+                <div class="am-u-sm-3">
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                </div>
+            </div>
+            <hr class="am-cf am-margin-vertical-sm am-margin-left"/>
+
+            <div class="am-g am-g-collapse">
+                <div class="am-u-sm-8 am-u-sm-offset-1 ">
+                    <div class="margin-push">
+                        免费领取银卡会员卡免费领取银卡会员卡免费领免费领取银卡会员卡免费领取银卡会员卡免费领
+                    </div>
+                </div>
+                <div class="am-u-sm-3">
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                </div>
+            </div>
+            <hr class="am-cf am-margin-vertical-sm"/>
+
+            <div class="am-g am-g-collapse">
+                <div class="am-u-sm-1 text-orange">
+                    <i class="iconfont">&#xe60e;</i>
+                </div>
+                <div class="am-u-sm-8">
+                    <div class="margin-push">
+                        免费领取银卡会员卡免费领取银卡免费领取银卡
+                    </div>
+                </div>
+                <div class="am-u-sm-3">
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+<!--登陆end-->
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
 <script>
-    $(function () {
-        $('#doc-my-tabs').tabs();
-    })
 </script>
 </body>
 </html>
