--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="assets/i/favicon.png" style="width: 80px;height: 30px">
         </div>
 
-        <div class="am-header-right am-header-nav am-dropdown text-black" data-am-dropdown>
+        <div class="am-header-right am-header-nav am-dropdown text-black logic hide" data-am-dropdown>
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
                 <h4 class="text-black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
             </a>
@@ -46,8 +46,12 @@
                 <li class="am-divider"></li>
                 <li><a href="#">补全生日</a></li>
                 <li class="am-divider"></li>
-                <li><a href="#">登出</a></li>
+                <li><a id="logic_out" href="#">登出</a></li>
             </ul>
+        </div>
+        <div class="am-header-right am-header-nav text-black unlogic">
+            有上宾账号?
+            <span class="text-orange" id="logic">直接登陆</span>
         </div>
     </header>
     <hr/>
@@ -75,20 +79,24 @@
     </div>
 </div>
 <hr/>
-<div class="am-padding-vertical"
+<a href="vip.html">
+<div class="am-padding-vertical unlogic"
      style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
     <div class="am-g am-inline">
         <div class="am-u-sm-1">
             <img src="assets/images/hui.png" class="icon">
         </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <div class="am-u-sm-6 am-padding-left am-text-sm">免费领取会员啦！积分
+            <div class="text-grey am-text-xs">2015.07.01前有效</div>
+        </div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
 </div>
+</a>
 <hr/>
-<a href="vip.html">
+<a href="vip.html" class="hide logic">
     <div class="am-g am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat;">
         <div class=" am-u-sm-offset-1 am-u-sm-9 am-padding-left am-text-sm">你是会员会员会员</div>
         <div class="am-u-sm-2 text-grey am-text-xs am-inline">
@@ -267,12 +275,10 @@
     <hr/>
     <div class="am-g am-margin-vertical-sm ">
         <div class="am-u-sm-12  am-text-center">
-            <a href="power.html">
-                <button class=" am-u-sm-10 am-u-sm-offset-1 am-btn am-radius bg-orange text-white">
-                    召唤特权
-                    智付买单
-                </button>
-            </a>
+            <button id="power" class="am-u-sm-10 am-u-sm-offset-1 am-btn am-radius bg-orange text-white">
+                召唤特权
+                智付买单
+            </button>
         </div>
     </div>
     <div class="am-text-center am-text-xs text-orange"><img src="assets/images/pay.png">
@@ -286,6 +292,7 @@
 </div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
+<script src="assets/js/js.cookie.js"></script>
 <script src="assets/js/index.js"></script>
 </body>
 </html>
