--- a/power.html
+++ b/power.html
@@ -55,7 +55,7 @@
     <div style="height: 70px" class="am-padding-sm bg-white">
         <div class="border-radius"
              style="background:url('assets/images/card-bg.png') no-repeat;background-size: 100% 100%;height: 90px">
-            <div class="am-padding-sm" style="margin: auto">
+            <div class="am-padding-sm">
                 <div>
                     <strong class="am-text-truncate">徽味轩银卡会员</strong>
                     <div class="am-fr am-text-xs" style="padding-top: 3px">
